--- a/jour-www/src/components/NavBar/NavBrand/NavBrand.css
+++ b/jour-www/src/components/NavBar/NavBrand/NavBrand.css
@@ -2,8 +2,8 @@
   color: lightgray;
 }
 
-.NavBrand.navbar-brand span {
-  padding-left: 5px;
+.NavBrand.navbar-brand img {
+  padding-left: 8px;
   font-weight: bold;
   color: lightgray;
 }
